--- a/css/playlists.css
+++ b/css/playlists.css
@@ -15,39 +15,46 @@ a{
   text-decoration: none !important;
 }
 /* ===== NAVBAR ===== */
-.navbar{
-  width: 100%;
-  height: 75px;
-  background: #000;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 80px;
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 75px;
+    background: #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 80px;
+    z-index: 1000;
 }
 
 .logo {
     display: flex;
     align-items: center;
     gap: 12px;
-    color:#e50914;
     font-size: 28px;
     font-weight: 600;
 }
 
+.logo span {
+    color: #ff2e2e;
+}
+
 .logo-img {
-    width: 80px;  
+    width: 80px;
     height: 80px;
     object-fit: contain;
 }
 
-.nav-links{
+.nav-links {
     display: flex;
     gap: 55px;
     list-style: none;
     font-size: 17px;
+    align-items: center;
 }
 
-.nav-links li{
+.nav-links li {
     cursor: pointer;
     padding-bottom: 8px;
     position: relative;
@@ -74,16 +81,37 @@ a{
     border-radius: 3px;
 }
 
-.profile-icon{
-  display: flex;
+.profile {
+    display: flex;
     align-items: center;
     gap: 25px;
     font-size: 17px;
 }
 
+.streak {
+    font-size: 17px;
+}
+
+.profile-icon {
+    font-size: 22px;
+    cursor: pointer;
+    transition: 0.2s ease;
+    opacity: 0.8;
+}
+
+.profile-icon:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+.profile-icon.active {
+    opacity: 1;
+    filter: drop-shadow(0 0 4px #ff2e2e);
+}
+
 /* ===== CONTENT ===== */
 .container{
-  padding:40px 60px;
+  padding: 115px 60px 40px 60px;
 }
 
 .container h1{
